--- a/templates/security/reset_password.html.twig
+++ b/templates/security/reset_password.html.twig
@@ -28,7 +28,7 @@
                         {% endif %}
 
                         {# Reset Form #}
-                        <form method="post">
+                        <form method="post" data-turbo="false">
                             <div class="mb-4">
                                 <label for="password" class="form-label">
                                     <i class="fas fa-lock me-1 text-muted"></i> Nouveau mot de passe
